--- a/bookmark.html
+++ b/bookmark.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 </head>
-<body><header>
+<body>
+    <header>
     <h1>Quiz Page</h1>
     </header>
     <main>
