--- a/bookmark.html
+++ b/bookmark.html
@@ -14,25 +14,25 @@
     <main>
     <article class="question_card">
         <h2>Question 1</h2>
-        <i class="fa-solid fa-bookmark book"></i>
+        <i class="fa-solid fa-bookmark fa-xl book"></i>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente eius voluptate dolorum ipsam illum minus omnis dicta vero dolorem minima, alias itaque saepe assumenda odit quos magni ab! Vitae, ducimus?</p>
         <button>Show Answer</button>
     </article>
     <article class="question_card">
         <h2>Question 2</h2>
-        <i class="fa-solid fa-bookmark book"></i>
+        <i class="fa-solid fa-bookmark fa-xl book"></i>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente eius voluptate dolorum ipsam illum minus omnis dicta vero dolorem minima, alias itaque saepe assumenda odit quos magni ab! Vitae, ducimus?</p>
         <button>Show Answer</button>
     </article>
     <article class="question_card">
         <h2>Question 3</h2>
-        <i class="fa-solid fa-bookmark book"></i>
+        <i class="fa-solid fa-bookmark fa-xl book"></i>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente eius voluptate dolorum ipsam illum minus omnis dicta vero dolorem minima, alias itaque saepe assumenda odit quos magni ab! Vitae, ducimus?</p>
         <button>Show Answer</button>
     </article>
     <article class="question_card">
         <h2>Question 4</h2>
-        <i class="fa-solid fa-bookmark book"></i>
+        <i class="fa-solid fa-bookmark fa-xl book"></i>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente eius voluptate dolorum ipsam illum minus omnis dicta vero dolorem minima, alias itaque saepe assumenda odit quos magni ab! Vitae, ducimus?</p>
         <button>Show Answer</button>
         </main>
@@ -41,8 +41,8 @@
      <footer>
         <nav>
     
-            <a href="./index.html"><i class="fa-solid fa-house icon"></i></a>
-        <a href="./bookmark.html"><i class="fa-regular fa-bookmark fa-xl icon"></i></a>
+            <a href="./index.html"><i class="fa-solid fa-house fa-xl icon"></i></a>
+        <a href="./bookmark.html"><i class="fa-solid fa-bookmark fa-xl icon"></i></a>
         <a href="./profile.html"><i class="fa-regular fa-user fa-xl icon"></i></a>
         </nav>
     </footer>
