--- a/profile.html
+++ b/profile.html
@@ -14,9 +14,9 @@
     <footer>
         <nav>
     
-            <a href="./index.html"><i class="fa-solid fa-house icon"></i></a>
+            <a href="./index.html"><i class="fa-solid fa-house fa-xl icon"></i></a>
             <a href="./bookmark.html"><i class="fa-regular fa-bookmark fa-xl icon"></i></a>
-            <a href="./profile.html"><i class="fa-regular fa-user fa-xl icon"></i></a>
+            <a href="./profile.html"><i class="fa-solid fa-user fa-xl icon"></i></a>
             
         </nav>
     </footer>
