--- a/index.html
+++ b/index.html
@@ -15,32 +15,37 @@
 <article class="question_card">
     <h2>Question 1</h2>
     <i class="fa-regular fa-bookmark fa-xl book" style="color:  white;"></i>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente eius voluptate dolorum ipsam illum minus omnis dicta vero dolorem minima, alias itaque saepe assumenda odit quos magni ab! Vitae, ducimus?</p>
+    <p> What is the name of the first Marvel Cinematic Universe film, released in 2008?</p>
     <button>Show Answer</button>
+    <p class="answer">Ironman</p>
 </article>
 <article class="question_card">
     <h2>Question 2</h2>
     <i class="fa-regular fa-bookmark fa-xl book" style="color: white;"></i>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente eius voluptate dolorum ipsam illum minus omnis dicta vero dolorem minima, alias itaque saepe assumenda odit quos magni ab! Vitae, ducimus?</p>
+    <p>What is the name of the powerful artifact that Thanos seeks to collect in the MCU?</p>
     <button>Show Answer</button>
+    <p class="answer">IInfinity Stones</p>
 </article>
 <article class="question_card">
     <h2>Question 3</h2>
     <i class="fa-regular fa-bookmark fa-xl book" style="color: white;"></i>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente eius voluptate dolorum ipsam illum minus omnis dicta vero dolorem minima, alias itaque saepe assumenda odit quos magni ab! Vitae, ducimus?</p>
+    <p>What is the real name of the superhero known as Iron Man?</p>
     <button>Show Answer</button>
+    <p class="answer">Tony Stark</p>
 </article>
 <article class="question_card">
     <h2>Question 4</h2>
     <i class="fa-regular fa-bookmark fa-xl book" style="color: white;"></i>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente eius voluptate dolorum ipsam illum minus omnis dicta vero dolorem minima, alias itaque saepe assumenda odit quos magni ab! Vitae, ducimus?</p>
+    <p> Which MCU film features the first appearance of the character Black Panther?</p>
     <button>Show Answer</button>
+    <p class="answer">Captain America: Civil War</p>
 </article>
 <article class="question_card">
     <h2>Question 5</h2>
     <i class="fa-regular fa-bookmark fa-xl book" style="color: white;"></i>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente eius voluptate dolorum ipsam illum minus omnis dicta vero dolorem minima, alias itaque saepe assumenda odit quos magni ab! Vitae, ducimus?</p>
+    <p> What is the name of Thor's enchanted hammer?</p>
     <button>Show Answer</button>
+    <p class="answer">Mjolnir</p>
 </article>
 </main>
 <footer>
