--- a/profile.html
+++ b/profile.html
@@ -8,7 +8,16 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    PROFILE PAGE
+    <header>
+        <h1>Quiz Page</h1>
+        </header>
+        <main>
+            <section>
+                <p><Strong>Settings</Strong></p>
+                <p>Dark Mode</p>
+                
+            </section>
+        </main>
 
 
     <footer>
