--- a/bookmark.html
+++ b/bookmark.html
@@ -17,7 +17,7 @@
             <i class="fa-solid fa-bookmark fa-xl book" style="color: white;"></i>
             <p>What is the name of the powerful artifact that Thanos seeks to collect in the MCU?</p>
             <button>Show Answer</button>
-            <p class="answer">IInfinity Stones</p>
+            <p class="answer">Infinity Stones</p>
         </article>
         <article class="question_card">
             <h2>Question 3</h2>
