--- a/index.html
+++ b/index.html
@@ -16,40 +16,40 @@
     <h2>Question 1</h2>
     <i class="fa-regular fa-bookmark fa-xl book" style="color:  white;"></i>
     <p> What is the name of the first Marvel Cinematic Universe film, released in 2008?</p>
-    <button>Show Answer</button>
+    <button aria-label="Show Answer">Show Answer</button>
     <p class="answer">Ironman</p>
 </article>
 <article class="question_card">
     <h2>Question 2</h2>
     <i class="fa-regular fa-bookmark fa-xl book" style="color: white;"></i>
     <p>What is the name of the powerful artifact that Thanos seeks to collect in the MCU?</p>
-    <button>Show Answer</button>
+    <button aria-label="Show Answer">Show Answer</button>
     <p class="answer">IInfinity Stones</p>
 </article>
 <article class="question_card">
     <h2>Question 3</h2>
     <i class="fa-regular fa-bookmark fa-xl book" style="color: white;"></i>
     <p>What is the real name of the superhero known as Iron Man?</p>
-    <button>Show Answer</button>
+    <button aria-label="Show Answer">Show Answer</button>
     <p class="answer">Tony Stark</p>
 </article>
 <article class="question_card">
     <h2>Question 4</h2>
     <i class="fa-regular fa-bookmark fa-xl book" style="color: white;"></i>
     <p> Which MCU film features the first appearance of the character Black Panther?</p>
-    <button>Show Answer</button>
+    <button aria-label="Show Answer">Show Answer</button>
     <p class="answer">Captain America: Civil War</p>
 </article>
 <article class="question_card">
     <h2>Question 5</h2>
     <i class="fa-regular fa-bookmark fa-xl book" style="color: white;"></i>
     <p> What is the name of Thor's enchanted hammer?</p>
-    <button>Show Answer</button>
+    <button aria-label="Show Answer">Show Answer</button>
     <p class="answer">Mjolnir</p>
 </article>
 </main>
 <footer>
-    <nav>
+    <nav aria-labelledby="navbar">
 
         <a href="./index.html"><i class="fa-solid fa-house fa-xl icon"></i></a>
         <a href="./bookmark.html"><i class="fa-regular fa-bookmark fa-xl icon"></i></a>
