--- a/profile.html
+++ b/profile.html
@@ -46,7 +46,7 @@
 
 
     <footer>
-        <nav>
+        <nav aria-labelledby="navbar">
     
             <a href="./index.html"><i class="fa-solid fa-house fa-xl icon"></i></a>
             <a href="./bookmark.html"><i class="fa-regular fa-bookmark fa-xl icon"></i></a>
